--- a/app/elements/common/skill/skill-polygon.html
+++ b/app/elements/common/skill/skill-polygon.html
@@ -17,7 +17,7 @@
 	<template>
 		<canvas id="polygonCanvas"></canvas>
 	</template>
-	<script type="application/javascript" src="../../../bower_components/Chart.js/Chart.js"></script>
+	<script type="application/javascript" src="../../../bower_components/Chart.js/dist/Chart.js"></script>
 	<script>
 		Polymer({
 			is: 'skill-polygon',
@@ -36,10 +36,9 @@
 				_options: {
 					type: Object,
 					value: {
-						scaleOverride: true,
-						scaleSteps: 5,
-						scaleStepWidth: 20,
-						scaleStartValue: 0
+						legend: {
+							display: false
+						}
 					}
 				},
 				_data: {
@@ -48,12 +47,12 @@
 						datasets: [
 							{
 								label: 'Skills',
-								fillColor: 'rgba(151,187,205,0.2)',
-								strokeColor: 'rgba(151,187,205,1)',
-								pointColor: 'rgba(151,187,205,1)',
-								pointStrokeColor: '#fff',
-								pointHighlightFill: '#fff',
-								pointHighlightStroke: 'rgba(151,187,205,1)'
+								borderColor: 'rgba(151,187,205,1)',
+								backgroundColor: "rgba(151,187,205,0.8)",
+								pointBorderColor: '#fff',
+								pointBackgroundColor: 'rgba(151,187,205,1)',
+								pointHoverBackgroundColor: '#fff',
+								pointHoverBorderColor: 'rgba(151,187,205,1)'
 							}
 						]
 					}
@@ -82,7 +81,11 @@
 						this.chart.destroy();
 					}
 					this.async(function() {
-						this.chart = new Chart(this.ctx).Radar(this._data, this._options);
+						this.chart = new Chart(this.ctx, {
+							type: 'radar',
+							data: this._data,
+							options: this._options
+						});
 					}, null, 0);
 				}, null, 0);
 			}
