--- a/app/elements/coder/profile/user-challenges-table.html
+++ b/app/elements/coder/profile/user-challenges-table.html
@@ -45,6 +45,9 @@
 			observers: [
 				'_dataChanged(challenges)'
 			],
+			ready: function(){
+				this.$$('my-teams-provider').refresh();
+			},
 			_selectedItemsChanged: function(){
 				var selected = this.$.challengesGrid.selection.selected();
 				if(!selected || selected.length === 0){
