--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -72,6 +72,7 @@
 <link rel="import" href="coder/team/user-teams-table.html">
 <link rel="import" href="coder/team/user-team-invitations-table.html">
 <link rel="import" href="coder/team/profile/team-members-table.html">
+<link rel="import" href="coder/team/profile/team-profile-page.html">
 <link rel="import" href="coder/team/edit-team-modal.html">
 <link rel="import" href="coder/team/delete-team-modal.html">
 <link rel="import" href="coder/team/invite-to-team-modal.html">
