Add first and last  name to challenge register wizard (#277)

--- a/app/elements/common/register/register-page.html
+++ b/app/elements/common/register/register-page.html
@@ -61,6 +61,28 @@ paper-input {
 							required>
 						</paper-input>
 						<paper-input
+							type="text"
+							label="First name"
+							value="{{user.firstName}}"
+							minLength="2"
+							maxLength="40"
+							autofocus="[[!externalWidget]]"
+							pattern="^[\w-\. ]{2,40}$"
+							error-message="Must be between 2 and 40 chars and only contain letters."
+							required="[[externalWidget]]">
+						</paper-input>
+						<paper-input
+							type="text"
+							label="Last name"
+							value="{{user.lastName}}"
+							minLength="2"
+							maxLength="40"
+							autofocus="[[!externalWidget]]"
+							pattern="^[\w-\. ]{2,40}$"
+							error-message="Must be between 2 and 40 chars and only contain letters."
+							required="[[externalWidget]]">
+						</paper-input>
+						<paper-input
 							type="password"
 							label="Password"
 							value="{{user.password}}"
