Add location dropdown to challenge register (#278)

--- a/app/elements/coder/challenge/register-wizard/challenge-register-step.html
+++ b/app/elements/coder/challenge/register-wizard/challenge-register-step.html
@@ -30,6 +30,7 @@
 	<template>
 		<create-team-modal id="createTeamDialog" on-team-created="refresh"></create-team-modal>
 		<my-teams-provider data="{{teams}}"></my-teams-provider>
+		<locations-by-challenge-canonical-name-provider canonical-name="[[challenge.canonicalName]]" data="{{locations}}"></locations-by-challenge-canonical-name-provider>
 		<iron-ajax id="registerRequest"
 			method="PUT"
 			handle-as="text"
@@ -56,6 +57,13 @@
 				<p>You are currently not part of any team, if you wish to participate as a team
 					 click <a on-click="_openTeamModal">here</a> to create one. </p>
 			</template>
+			<paper-dropdown-menu label="Location" selected-item="{{selectedLocation}}" >
+				<paper-listbox class="dropdown-content" selected="0">
+					<template is="dom-repeat" items="{{locations}}">
+						<option value="{{item.id}}">{{item.name}}</option>
+					</template>
+				</paper-listbox>
+			</paper-dropdown-menu>
 			<div id="buttons">
 				<span class="flex"></span>
 				<paper-button raised on-click="_register">Register</paper-button>
@@ -71,8 +79,15 @@
 				Behaviors.AppConnection
 			],
 			observers: [
-				'_teamsLoaded(teams)'
+				'_teamsLoaded(teams)',
+				'_locationsLoaded(locations)'
 			],
+			_locationsLoaded: function(){
+				if(!this.locations){
+					this.locations = [];
+				}
+				this.unshift('locations', {id: 'online', name: 'Online'});
+			},
 			_teamsLoaded: function(){
 				if(!this.teams || this.teams.length === 0){
 					this.hasTeams = false;
@@ -82,10 +97,13 @@
 				this.unshift('teams', {canonicalName: '', name: 'No team'});
 			},
 			_openTeamModal: function(){
-				this.$.createTeamDialog.toggle();
+				this.$.createTeamDialog.open();
 			},
 			_register: function(){
-				this.$.registerRequest.body = {team: this.selectedTeam ? this.selectedTeam.value : ''};
+				this.$.registerRequest.body = {
+					team: this.selectedTeam ? this.selectedTeam.value : '',
+					location: this.selectedLocation ? (this.selectedLocation.value === 'online' ? '' : this.selectedLocation.value) : ''
+				};
 				this.$.registerRequest.url = util.build('/challenges/' + this.challenge.canonicalName + '/register');
 				this.$.registerRequest.generateRequest();
 			},
@@ -95,6 +113,7 @@
 			},
 			refresh: function(){
 				this.$$('my-teams-provider').refresh();
+				this.$$('locations-by-challenge-canonical-name-provider').refresh();
 			}
 		});
 	</script>
