--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -86,6 +86,7 @@
 <link rel="import" href="common/data-providers/challenge/challenge-by-canonical-name-provider.html"/>
 <link rel="import" href="common/data-providers/challenge/user-status-for-challenge-provider.html"/>
 <link rel="import" href="common/data-providers/challenge/invitation/invitations-by-challenge-canonical-name-provider.html"/>
+<link rel="import" href="common/data-providers/challenge/location/locations-by-challenge-canonical-name-provider.html"/>
 <link rel="import" href="common/data-providers/challenge/participation/participants-by-challenge-canonical-name-provider.html"/>
 <link rel="import" href="common/data-providers/challenge/template/challenge-templates-for-active-organization-provider.html"/>
 <link rel="import" href="common/data-providers/challenge/template/challenge-template-by-challenge-canonical-name-provider.html"/>
