--- a/app/elements/company/challenge/challenge-create.html
+++ b/app/elements/company/challenge/challenge-create.html
@@ -36,6 +36,8 @@
 					<paper-input id="canonicalName" class="margined" label="Canonical name*" value="{{challenge.canonicalName}}" required></paper-input>
 					<paper-checkbox id="inviteOnly" value="{{challenge.inviteOnly}}" checked>Invite only</paper-checkbox>
 					<date-time-picker id="startDate" label="Fixed start date" date-time="{{challenge.startDate}}"></date-time-picker>
+					<br>
+					<challenge-create-locations locations="{{challenge.locations}}"></challenge-create-locations>
 				</form>
 				<div class="buttonGroup">
 					<paper-button raised on-click="_saveChallenge">Save</paper-button>
