Increase padding above and below social login

--- a/app/elements/common/login/login-page-email/login-page-email.html
+++ b/app/elements/common/login/login-page-email/login-page-email.html
@@ -41,8 +41,14 @@ paper-button {
 	background-color: #007BB6;
 }
 
+#socialSignInWrapper {
+	padding-top: 12px;
+	padding-bottom: 12px;
+}
+
 #signupWrapper {
 	@apply(--layout-horizontal);
+	padding-top: 24px;
 }
 
 span {
