--- a/app/elements/coder/team/create-team-modal.html
+++ b/app/elements/coder/team/create-team-modal.html
@@ -26,7 +26,7 @@
 			on-request-finished="_onResponse">
 		</coduno-iron-ajax>
 		<paper-dialog id="createTeamDialog" modal>
-			<h4>Create new team</h4>
+			<h4>Create a new Team</h4>
 			<div class="fieldList">
 				<errors-display error="{{error}}"></errors-display>
 				<form is="iron-form" id="form">
